[gd_scene load_steps=4 format=3 uid="uid://b43ph8jib88s8"]

[ext_resource type="Script" path="res://Script/ui.gd" id="1_5a808"]
[ext_resource type="Theme" uid="uid://dayjblgcjcity" path="res://Scenes/label_theme.tres" id="2_f6ugk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ae5u"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5a808")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifeCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_f6ugk")
text = "1 UP"

[node name="GameScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_f6ugk")
text = "SCORE : 0"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ae5u")

[node name="RestartButton" type="Button" parent="MarginContainer/CenterContainer/Panel"]
layout_mode = 2
offset_left = -410.0
offset_top = 79.0
offset_right = 710.0
offset_bottom = 110.0
text = "Restart Level"

[node name="NextLevelButton" type="Button" parent="MarginContainer/CenterContainer/Panel"]
layout_mode = 2
offset_left = -410.0
offset_top = 114.0
offset_right = 710.0
offset_bottom = 145.0
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="MarginContainer/CenterContainer/Panel"]
layout_mode = 2
offset_left = -410.0
offset_top = 149.0
offset_right = 710.0
offset_bottom = 180.0
text = "Main Menu"

[node name="GameLabel" type="Label" parent="MarginContainer/CenterContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -75.0
offset_right = 101.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_f6ugk")
text = "Game won!"
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="MarginContainer/CenterContainer2"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ae5u")

[node name="TryAgainButton" type="Button" parent="MarginContainer/CenterContainer2/Panel2"]
layout_mode = 2
offset_left = -411.0
offset_top = 95.0
offset_right = 709.0
offset_bottom = 126.0
text = "Restart Level"

[node name="MainMenuButton" type="Button" parent="MarginContainer/CenterContainer2/Panel2"]
layout_mode = 2
offset_left = -410.0
offset_top = 137.0
offset_right = 710.0
offset_bottom = 168.0
text = "Main Menu"

[node name="GameLabel2" type="Label" parent="MarginContainer/CenterContainer2/Panel2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -75.0
offset_right = 101.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_f6ugk")
text = "Game Over"
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/CenterContainer/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Panel/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer2/Panel2/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer2/Panel2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
